--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
