--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "tailwindcss": "^2.0.1",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.31.1"
